samples/_failures_safe/1761095821_03d94d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1c03de75.c: In function ‘main’:
./samples/SAFE/__tmp_1c03de75.c:156:21: error: expected declaration or statement at end of input
  156 |                     print_matrix(&result, "A + B");
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_1c03de75.c:156:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1c03de75.c:156:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1c03de75.c:156:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1c03de75.c:156:21: error: expected declaration or statement at end of input
